pkgs/clcry/src/snapshots/clcry__linear_layout__tests__content_alignment.snap
---
source: pkgs/clcry/src/linear_layout.rs
expression: render(layout)
---
Row start
+-------------+
|Item0Item1   |
+-------------+
Row center
+-------------+
| Item0Item1  |
+-------------+
Row end
+-------------+
|   Item0Item1|
+-------------+
Column start
+-----+
|Item0|
|Item1|
|     |
|     |
+-----+
Column center
+-----+
|     |
|Item0|
|Item1|
|     |
+-----+
Column end
+-----+
|     |
|     |
|Item0|
|Item1|
+-----+
