pkgs/clcry/src/snapshots/clcry__linear_layout__tests__flexible_child_receives_spare_space_without_truncating_fixed_children.snap
---
source: pkgs/clcry/src/linear_layout.rs
expression: snapshots
---
wide
##############################################################
#Memory ████████████████░░░░░░░░░░░░░░░░13.3 / 31.1 GiB (43%)#
##############################################################

narrow
##########################################
#Memory ██████░░░░░░13.3 / 31.1 GiB (43%)#
##########################################
