pkgs/clcry/src/snapshots/clcry__linear_layout__tests__progress_bar_renders_fractional_progress.snap
---
source: pkgs/clcry/src/linear_layout.rs
expression: snapshots
---
wide
##############################################################
#                               ▉                            #
##############################################################

narrow
##########################################
#                     ▎                  #
##########################################
